<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">


    <include android:id="@+id/action_bar_about"
        layout="@layout/toolbar"></include>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?attr/actionBarSize"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/about_img_margin"
            android:src="@drawable/person"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/about_txt_padding"
            android:justificationMode="inter_word"
            android:text="@string/about"
            android:textSize="@dimen/about_txt_size" />

        <TextView
            android:textSize="@dimen/about_txt_size"
            android:padding="@dimen/about_txt_padding"
            android:justificationMode="inter_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about2"/>

        <TextView
            android:textSize="@dimen/about_txt_size"
            android:padding="@dimen/about_txt_padding"
            android:justificationMode="inter_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about3"/>

        <TextView
            android:textSize="@dimen/about_txt_size"
            android:padding="@dimen/about_txt_padding"
            android:justificationMode="inter_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"/>

   </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>